# Firmware

./: .gitignore  ACU-25.ioc  BUILD.md  CMAKE.md  CMakeLists.txt  CMakePresets.json  DEBUGGING.md  EXTENDING.md  PLANNING.md  Planning.md  README.md  makefile  notes.md  planning.md  setup_intellisense.sh
.github/workflow/: CheckHalDriver.yml  RunCTests.yml
.github/workflows/: BuildAllPresets.yml  CheckHalDriver.yml  ClangFormat.yml  RunCTests.yml  build.yml
ACU/: CMakeLists.txt  README.md
ACU/Application/Inc/: acu.h  battery.h  config.h  debug.h  mcu.h  state.h
ACU/Application/Src/: acu.c  battery.c  debug.c  mcu.c  state.c
ACU/Application/Test/: advanced_hootl_test.c  basic_hootl_test.c
ACU/Core/Inc/: adc.h  fdcan.h  main.h  spi.h  stm32_assert.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h  usart.h
ACU/Core/Src/: adc.c  dma.c  fdcan.c  gpio.c  main.c  spi.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  system_stm32g4xx.c  tim.c  usart.c
Application/Inc/: bcc_diagnostics.h
Application/Src/: acu.c  bcc_diagnostics.c  debug.c
CCU/: CMakeLists.txt
CCU/Application/Inc/: CANdler.h  StateMachine.h  driving.h
CCU/Application/Src/: CANdler.c  StateMachine.c
CCU/Core/Inc/: fdcan.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
CCU/Core/Src/: adc.c  fdcan.c  main.c  stm32g4xx_it.c  usart.c
Core/Inc/: main.h  tim.h
Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  tim.c  usart.c
DashPanel/: CMakeLists.txt  CMakePresets.json  README.md  riverdi-50-stm32u5-lvgl.ioc
DashPanel-25/: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  README.md
DashPanel-25/Application/Inc/: CANdler.h  utils.h
DashPanel-25/Application/Src/: CANdler.c  dash.c
DashPanel-25/Application/Src/Fonts/: lv_font_gr_bold_24.c  lv_font_gr_bold_32.c  lv_font_gr_regular_32.c
DashPanel-25/CSV-25/: README.md
DashPanel-25/Core/Inc/: fdcan.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h  tim.h
DashPanel-25/Core/Src/: adc.c  app_freertos.c  hash.c  i2c.c  lvgl_port_display.c  spi.c  usart.c
DashPanel-25/cmake/stm32cubemx/: CMakeLists.txt
DashPanel/Application/Inc/: buttons.h  customIDs.h  dash.h  grIDs.h  gui.h  msgIDs.h
DashPanel/Application/Src/: buttons.c  gui.c  utils.c
DashPanel/Application/Src/Fonts/: lv_font_gr_bold_40.c  lv_font_gr_light_40.c  lv_font_gr_regular_16.c
DashPanel/Core/Inc/: main.h
DashPanel/Core/Src/: fdcan.c  gpio.c  main.c  stm32u5xx_hal_timebase_tim.c  tim.c
ECU/: .mailmap  .mxproject  CMakeLists.txt  README.md
ECU-25/: .ccls  .gitignore  .gitmodules  CMakeLists.txt  ECU-25.ioc  GR25StateMachine.excalidraw  README.md
ECU-25/Application/Inc/: CANdler.h  customIDs.h  inverter.h  utils.h
ECU-25/Application/Src/: driving.c  inverter.c  pinging.c  stateMachine.c
ECU-25/CSV-25/: .gitignore  executeCSV.sh  grCSVtoH.py
ECU-25/Core/Inc/: adc.h
ECU-25/Core/Src/: gpio.c
ECU-25/cmake/: gcc-arm-none-eabi.cmake
ECU-25/cmake/stm32cubemx/: CMakeLists.txt
ECU/Application/Inc/: customIDs.h  grIDs.h  msgIDs.h
ECU/Application/Src/: CANdler.c  utils.c
ECU/Core/Inc/: crc.h  fdcan.h  main.h
ECU/Core/Src/: crc.c  fdcan.c  main.c
ECU/Drivers/STM32G4xx_HAL_Driver/Src/: stm32g4xx_ll_adc.c
G4BLINKY/: CMakeLists.txt  README.md
G4BLINKY/Application/Src/: appdemo.c
G4BLINKY/Application/Test/: advanced_application_hootl_test.c  basic_application_hootl_test.c
G4BLINKY/Core/Inc/: fdcan.h  main.h  spi.h  stm32g4xx_hal_conf.h
G4BLINKY/Core/Src/: adc.c  coredemo.c  crc.c  fdcan.c  gpio.c  main.c  spi.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
G4BLINKY/Core/Test/: advanced_core_test.c  basic_core_test.c
G4MVP/: CMakeLists.txt
Inc/: acu.h  bcc.h  mcu.h
Lib/Platform/PlatformTemplate/: History.md  chip.cmake
Lib/Platform/STM32G474/: stm32g474.cmake
Lib/Platform/STM32G474/CompileDependencies/: system_stm32g4xx.c
Lib/Platform/STM32G474xE/: CMakeLists.txt  History.md  chip.cmake
Lib/Platform/STM32G474xE/CompileDependencies/: STM32G474RETx_FLASH.ld
Lib/Platform/STM32U5A9xJ/: History.md  chip.cmake
Lib/Utils/ICANStruct/: ICANStruct.c  ICANStruct.h  can.md
Lib/cmake/: HOOTL.cmake  gcc-arm-none-eabi.cmake  gr-lib.cmake
MVP/: CMakeLists.txt
MVP/Core/Src/: gpio.c  main.c  syscalls.c
ProjectTemplate/: CMakeLists.txt
Src/: acu.c  main.c  state.c
SteeringPanel/: CMakeLists.txt  CMakePresets.json  README.md
SteeringPanel-25/: .gitmodules  CMakeLists.txt  riverdi-50-stm32u5-lvgl.ioc
SteeringPanel-25/Application/Inc/: steering.h
SteeringPanel-25/Application/Src/: CANdler.c  gui.c  steering.c  utils.c
SteeringPanel-25/Application/Src/Fonts/: lv_font_gr_bold_16.c  lv_font_gr_light_16.c  lv_font_gr_light_24.c  lv_font_gr_light_32.c
SteeringPanel-25/CSV-25/: MSG-ID.csv  msgCSVtoH.py
SteeringPanel-25/Core/Inc/: main.h  stm32u5xx_hal_conf.h
SteeringPanel-25/Core/Src/: gpio.c  ltdc.c  lvgl_port_display.c
SteeringPanel-25/cmake/: gcc-arm-none-eabi.cmake
SteeringPanel/Application/Inc/: CANdler.h  customIDs.h  encoders.h  grIDs.h  gui.h  msgIDs.h  utils.h
SteeringPanel/Application/Src/: encoders.c
SteeringPanel/Core/Src/: app_freertos.c  fdcan.c  main.c  mx25lm51245g.c
U5BLINKY/: CMakeLists.txt  README.md
U5BLINKY/Application/Src/: appdemo.c
U5BLINKY/Application/Test/: advanced_application_hootl_test.c  basic_application_hootl_test.c
U5BLINKY/Core/Inc/: coredemo.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h
U5BLINKY/Core/Src/: coredemo.c  main.c  stm32u5xx_hal_msp.c  stm32u5xx_it.c  syscalls.c  sysmem.c  system_stm32u5xx.c
U5BLINKY/Core/Test/: advanced_core_test.c
cmake/stm32cubemx/: CMakeLists.txt
lib/: Cmakelists.txt  SHARED_CMSIS.md  SHARED_DRIVERS.md  Utility.c  Utility.h  lvgl.cmake  stm32cubemx.cmake  utils.c  utils.h
lib/CAN/: customIDs.h  grIDs.h  msgIDs.h
lib/CSVGenerator/: CUSTOM-ID.csv  GR-ID.csv  README.md  customIdCSVtoH.py  executeCSV.sh
lib/ECU-lib/: Cmakelists.txt
lib/ECU-lib/Inc/: driving.h  msgIDs.h  pinging.h  stateMachine.h
lib/ECU-lib/Test/: test.c
lib/LVGL/: lv_conf.h
lib/cmake/: cmsis-config.cmake  gcc-arm-none-eabi.cmake  stm32g4-config.cmake  stm32u5-config.cmake
(+488 files in other folders)
